@@ -32,36 +32,43 @@
       <artifactId>javafx-fxml</artifactId>
     </dependency>
     <!-- !org.openjfx.javafx-fxml -->
-      <dependency>
-          <groupId>com.google.guava</groupId>
-          <artifactId>guava</artifactId>
-          <version>33.0.0-jre</version>
-      </dependency>
-      <dependency>
-          <groupId>org.slf4j</groupId>
-          <artifactId>slf4j-api</artifactId>
-          <version>2.0.13</version>
-      </dependency>
-      <dependency>
-          <groupId>org.slf4j</groupId>
-          <artifactId>slf4j-simple</artifactId>
-          <version>2.0.13</version>
-      </dependency>
-      <dependency>
-          <groupId>ai.djl.sentencepiece</groupId>
-          <artifactId>sentencepiece</artifactId>
-          <version>0.36.0</version>
-      </dependency>
-      <dependency>
-          <groupId>org.apache.pdfbox</groupId>
-          <artifactId>pdfbox</artifactId>
-          <version>3.0.1</version>
-      </dependency>
-      <dependency>
-          <groupId>org.json</groupId>
-          <artifactId>json</artifactId>
-          <version>20231013</version>
-      </dependency>
+
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>33.0.0-jre</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>2.0.13</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-simple</artifactId>
+      <version>2.0.13</version>
+    </dependency>
+
+    <dependency>
+      <groupId>ai.djl.sentencepiece</groupId>
+      <artifactId>sentencepiece</artifactId>
+      <version>0.36.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.pdfbox</groupId>
+      <artifactId>pdfbox</artifactId>
+      <version>3.0.1</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20231013</version>
+    </dependency>
+
     <!-- org.openjfx.javafx-web -->
     <dependency>
       <groupId>org.openjfx</groupId>
@@ -167,6 +174,34 @@
       <artifactId>weka-stable</artifactId>
     </dependency>
     <!-- nz.ac.waikato.cms.weka.weka-stable -->
+
+    <!-- com.itextpdf.kernel -->
+    <dependency>
+      <groupId>com.itextpdf</groupId>
+      <artifactId>kernel</artifactId>
+    </dependency>
+    <!-- !com.itextpdf.kernel -->
+
+    <!-- com.itextpdf.layout -->
+    <dependency>
+      <groupId>com.itextpdf</groupId>
+      <artifactId>layout</artifactId>
+    </dependency>
+    <!-- !com.itextpdf.layout -->
+
+    <!-- com.squareup.okhttp3.okhttp -->
+    <dependency>
+      <groupId>com.squareup.okhttp3</groupId>
+      <artifactId>okhttp</artifactId>
+    </dependency>
+    <!-- !com.squareup.okhttp3.okhttp -->
+
+    <!-- com.google.code.gson -->
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+    </dependency>
+    <!-- !com.google.code.gson -->
   </dependencies>
 
   <build>
@@ -188,6 +223,11 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <compilerArgs>
+            <arg>--add-reads=com.serinity.accesscontrol=ALL-UNNAMED</arg>
+          </compilerArgs>
+        </configuration>
       </plugin>
       <!-- !org.apache.maven.plugins.maven-compiler-plugin -->
 
@@ -208,6 +248,7 @@
                 <option>--enable-native-access=javafx.web</option>
                 <option>--enable-native-access=com.microsoft.onnxruntime</option>
                 <option>--enable-native-access=org.opencv</option>
+                <option>--add-reads=com.serinity.accesscontrol=ALL-UNNAMED</option>
               </options>
               <includePathExceptionsInClasspath>true</includePathExceptionsInClasspath>
             </configuration>
